<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.Activity_NormalQuestion">


    <com.hjq.bar.TitleBar
        android:id="@+id/normalQuestion_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.hjq.bar.TitleBar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space15"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="Q1:怎么获得积分"
                    android:textStyle="bold"
                    android:textSize="@dimen/font18"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="在线支付的订单将获得订单积分奖励："
                    android:textSize="@dimen/font16"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space15"
                    android:layout_marginBottom="@dimen/space15"/>


                <TextView
                    android:text="@string/normalQuestion"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/space10"/>


                <TextView
                    android:text="@string/normalQuestion1"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/space10"
                    android:layout_marginTop="@dimen/space10"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/colorGray2"
                android:layout_marginTop="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="Q2:积分用来做什么?"
                    android:textStyle="bold"
                    android:textSize="@dimen/font18"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="@string/normalQuestion2"
                    android:textSize="@dimen/font16"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space15"
                    android:lineSpacingExtra="@dimen/space10"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/colorGray2"
                android:layout_marginTop="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="Q3:礼品兑换很多天了还没有收到,该怎么办？"
                    android:textStyle="bold"
                    android:textSize="@dimen/font18"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="@string/normalQuestion3"
                    android:textSize="@dimen/font16"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space15"
                    android:lineSpacingExtra="@dimen/space10"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/colorGray2"
                android:layout_marginTop="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="Q4:礼品兑换中的手机充值卡兑换,怎么样进行充值，充值之前会和我电话确认吗？"
                    android:textStyle="bold"
                    android:textSize="@dimen/font18"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/space10"/>


                <TextView
                    android:text="@string/normalQuestion4"
                    android:textSize="@dimen/font16"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space15"
                    android:lineSpacingExtra="@dimen/space10"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>